<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="hint_username">Username</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="logo_content_description">Logo</string>
    <string name="share_menu">share</string>
    <string name="title_activity_user_feed">UserFeedActivity</string>
    <string name="logout_menu">Logout</string>
</resources>
