<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="13dp"
    android:layout_marginEnd="13dp"
    android:gravity="center_horizontal"
    tools:context="com.zenbarrier.instagramclone.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageViewLogo"
        android:contentDescription="@string/logo_content_description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:hint="@string/hint_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="@string/hint_password"/>

    <Button
        android:text="@string/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogIn"
        android:onClick="logInOrSignUp"/>

    <Button
        android:text="@string/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonModeLog"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="switchModeLog"/>

</LinearLayout>
